--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,118 @@ img{
   height:auto
 }
 
-.card-title{
-  font-size:20px;
+.card-title.title{
+  font-size:28px;
 }
+
+.card-text.price{
+  font-size:22px;
+}
+
 
 .card-body{
 
 }
+/*
+.col.left-column{
+  width:400px;
+}
 
-.col{
-  width:43%;
+.col.right-column{
+  width:300px;
+}
+*/
+
+input.form-control.filter, input[type="input"]{
+  border-top:none;
+  border-left:none;
+  border-right:none;
+  border-bottom-color:#ccc;
+  border-radius:0;
+}
+
+.btn.btn-secondary{
+  background-color:#0080ff;
+  font-size: 12px;
+  font-weight:bold;
+  padding:12px;
+  box-shadow: 2px 2px 2px #cccccc;
+  border:0;
+}
+
+
+.price-cart{
+  font-weight:400 ;
+  color:#333;
+  font-size:24px;
+  opacity:.8;
+}
+
+.onSale{
+  color:green;
+  float:right;
+  font-weight:bold;
+  font-size:20px;
+  position:relative;
+  top:-90px;
+}
+
+.card.basket-container{
+  background-color:orange;
+top:0px;
+position:relative;
+padding:4px;
+min-height:100%;
+
+
+}
+
+.card-body.cart-item{
+width:100%;
+height:110px;
+}
+
+
+.card-title.title-cart{
+  font-size:20px;
+  width:80%;
+}
+
+.col.col-right-column{
+  margin-left:59%;
+  
+}
+
+.fa{
+  float:right;
+  position:relative;
+  top:-30px;
+}
+
+.body-cart.card-body{
+ 
+  height:100px;
+}
+
+.card-cart .card{
+  margin:10px;
+}
+
+.row{
+  width:50%;
+
+}
+
+.row-left-column{
+  width:50%;
+}
+
+.row-right-column{
+  width:40%;
+}
+
+.container{
+  display:flexbox;
+  flex-direction: row;
+
 }
